# UnitTestingInC

./: README.md  main.c  makefile  stack.c
practica1/: CMakeLists.txt  makefile
practica1/docs/: Practica1.docx
practica1/docs/imagenes/: dibujo.pptx
practica1/src/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  main.c
practica1/src/EEDD/: doubly_linked_list.c
src/: stack.h
stack/: CMakeLists.txt  makefile
stack/src/: CMakeLists.txt
stack/test/: CMakeLists.txt
test/: test_stack.c
test/unity/: unity.c  unity.h
